--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,30 +1,63 @@
-.principal {
-  background-color: aquamarine;
+/* ---------------------HEADER STYLE------------------------ */
+header {
+  background-color: brown;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
+#titulo__pagina {
+  font-size: 100px;
+}
+
+.topo {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.cat,
+.rat {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.cat {
+  margin-right: 100px;
+}
+.rat {
+  margin-left: 100px;
+}
+.icone-personagem {
+  font-size: 90px;
+  padding-bottom: 30px;
+  margin-right: 10px;
+}
+
+#cat-points,
+#rat-points {
+  font-size: 80px;
+  padding-bottom: 0px;
+}
+
+/* ---------------------GAMES STYLE------------------------ */
+
 .menu-games {
-  background-color: blue;
-  border: 1px solid pink;
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 400px;
 }
 
-.game-principal {
-  background-color: blueviolet;
-  width: 1000px;
+#game-principal {
+  width: 40%;
   height: 400px;
-}
-
-header {
-  background-color: brown;
-  height: 100px;
-}
-
-footer {
-  background-color: chocolate;
-  height: 100px;
 }
 
 .other-game {
@@ -36,5 +69,19 @@ footer {
 .inferior {
   width: 30%;
   height: 400px;
-  background-color: aliceblue;
+  background-color: aquamarine;
+}
+
+/* ---------------------FOOTER STYLE------------------------ */
+footer {
+  background-color: chocolate;
+  height: 100px;
+}
+
+/* ---------------------GAME PRINCIPAL STYLE------------------------ */
+
+#name-game {
+  text-align: center;
+  text-decoration: underline;
+  z-index: 3;
 }
